[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/NachoComet.png" type="Texture" id=1]
[ext_resource path="res://Nachoroid.gd" type="Script" id=2]

[node name="Nachoroid" type="Area2D" groups=["Nacho"]]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, -7.439 )
scale = Vector2( 0.6, 0.6 )
polygon = PoolVector2Array( -119, 88.5, -11, -99, -0.5, -104.5, 8, -100, 51.5, -17.5, 121, 88.5, 107.5, 98.5, 95.5, 100.5, -33, 99, -112, 100.5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7.439 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Position1" type="Position2D" parent="."]
position = Vector2( -34, 24 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 0, -34 )

[node name="Position3" type="Position2D" parent="."]
position = Vector2( 34, 24 )

[node name="Position4" type="Position2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Nachoroid_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
